--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
@@ -64,53 +64,61 @@
                 </p:fieldset>
                 <p:fieldset legend="Contract Information" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="6">
-                        <h:outputText value="Service ID:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service ID:" style="width: 150px"/><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.serviceQuotation.serviceCatalog.serviceCatalogId}" />
-                        <h:outputText value="Service Name:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Name:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.serviceQuotation.serviceCatalog.serviceName}" />
-                        <h:outputText value="Service Description" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Description:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.serviceQuotation.serviceCatalog.serviceDescription}" />
-                        <h:outputText value="Service Type" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Type:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.serviceType}" />
 
-                        <h:outputText value="Start Date:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Start Date:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.startDate}" />
-                        <h:outputText value="End Date:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="End Date:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.endDate}" />
 
-                        <h:outputText value="Expected Quantity Per Month (TEU):" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Expected Quantity Per Month (TEU):" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.selectedContract.serviceQuotation.quantityPerMonth}" />
 
                         <c:if test="#{viewContractManagedBean.selectedContract.serviceType eq 'Transportation'}" >
-                            <h:outputText value="Origin:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Origin:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.origin}" />
-                            <h:outputText value="Destination:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Destination:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.destination}" />
                         </c:if>
                         <c:if test="#{viewContractManagedBean.selectedContract.serviceType eq 'Warehouse'}" >
-                            <h:outputText value="Warehouse ID:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Warehouse ID:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.warehouseId}" />
-                            <h:outputText value="Storage Zone ID:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Storage Zone ID:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.storageZoneId}" />
-                            <h:outputText value="Storage Bin ID:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Storage Bin ID:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewContractManagedBean.selectedContract.storageBinId}" />
                         </c:if>
 
+
+
+                        <p:outputLabel value="Final Contract Price Per TEU:" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewContractManagedBean.selectedContract.price}" />
+                        <p:outputLabel value="Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewContractManagedBean.selectedContract.conditionText}" />
+                        <c:if test="#{viewContractManagedBean.selectedContract.status eq 2}" >
+                            <p:outputLabel value="Reasons for Modification:" /><p:spacer width="20" height="20" />
+                            <h:outputText value="#{viewContractManagedBean.selectedContract.reasonModification}" />
+                        </c:if> 
+
+
                         <c:if test="#{(viewContractManagedBean.selectedContract.status eq 2 )and(viewContractManagedBean.selectedContract.partyA eq viewContractManagedBean.companyId)}" >
-                            <h:outputText value="Modified Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
+                            <p:outputLabel value="Modified Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
                             <p:inputTextarea value="#{viewContractManagedBean.conditionText}" rows="5" cols="80" counter="display" maxlength="999" counterTemplate="{0} characters remaining." autoResize="true" />
                             <p:spacer width="20" height="20" /><p:spacer width="20" height="20" /><h:outputText id="display" />
-
                         </c:if>
 
-                        <h:outputText value="Final Contract Price Per TEU:" /><p:spacer width="20" height="20" />
-                        <h:outputText value="#{viewContractManagedBean.selectedContract.price}" />
-                        <h:outputText value="Terms &amp; Conditions:" /><p:spacer width="20" height="20" />
-                        <h:outputText value="#{viewContractManagedBean.selectedContract.conditionText}" />
 
-
-                        <h:outputText value="Status:" style="color: red" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Status:" style="color: red" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewContractManagedBean.status}"  style="color: red" />
+
+
 
                     </h:panelGrid>
                     <p:separator />
@@ -128,6 +136,10 @@
                     <p:commandButton value="View PDF Contract"  action="#{viewContractManagedBean.previewPDFContract}" ajax="false" />
                     <p:commandButton value="Download PDF Contract"  action="#{viewContractManagedBean.downloadPDFContract}" ajax="false"/>
                 </c:if>
+                <c:if test="#{(viewContractManagedBean.selectedContract.status eq 4) and (viewContractManagedBean.selectedContract.partyA eq viewContractManagedBean.companyId)}">
+                    <p:commandButton value="Upload Signed Contract"  action="#{viewContractManagedBean.uploadContract}" />
+                </c:if>
+
                 <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallcontracts.xhtml?faces-redirect=true"/>
 
 
