--- a/MerlionPortal/MerlionPortal-war/web/crms/viewquotationdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewquotationdetail.xhtml
@@ -63,47 +63,47 @@
                 </p:fieldset>
                 <p:fieldset legend="Quotation Information" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="6">
-                        <h:outputText value="Service ID:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service ID:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.serviceCatalog.serviceCatalogId}" />
-                        <h:outputText value="Service Name:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Name:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.serviceCatalog.serviceName}" />
-                        <h:outputText value="Service Description" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Description" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.serviceCatalog.serviceDescription}" />
-                        <h:outputText value="Service Type" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Service Type" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.serviceCatalog.serviceType}" />
 
-                        <h:outputText value="Start Date:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Start Date:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.startDate}" />
-                        <h:outputText value="End Date:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="End Date:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.endDate}" />
-                        <h:outputText value="Origin:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Origin:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.origin}" />
-                        <h:outputText value="Destination:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Destination:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.destination}" />
-                        <h:outputText value="Expected Quantity Per Month (TEU)" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Expected Quantity Per Month (TEU):" style="width: 150px" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.quantityPerMonth}" />
           
 
-                        <h:outputText value="Quotation Price Per TEU:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Quotation Price Per TEU:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.price}" />
-                        <h:outputText value="Discount in %:" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Discount in %:" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.selectedQuotation.discountRate}" />
                         
-                        <h:outputText value="Status:" style="color: red" /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Status:" style="color: red" /><p:spacer width="20" height="20" />
                         <h:outputText value="#{viewQuotationManagedBean.status}"  style="color: red" />
 
                     </h:panelGrid>
                     <p:separator />
                     <h:panelGrid style="float:right">
                         <h:panelGrid columns="3" cellpadding="6">
-                            <p:spacer width="20" height="20"/><p:spacer width="20" height="20"/><h:outputText value="Total" />
+                            <p:spacer width="20" height="20"/><p:spacer width="20" height="20"/><p:outputLabel value="Total" />
 
                             <h:outputText value="Original Price" /><p:spacer width="20" height="20"/><h:outputText value="#{viewQuotationManagedBean.selectedQuotation.price}" />
                             <h:outputText value="less discount" /><p:spacer width="20" height="20"/><h:outputText value="#{viewQuotationManagedBean.discountedPrice}" />
                         </h:panelGrid>
                         <p:separator/>
                         <h:panelGrid columns="3" cellpadding="6" >
-                            <h:outputText value="Final Price:" /><p:spacer width="20" height="20"/><h:outputText value="#{viewQuotationManagedBean.finalPrice}"/>
+                            <p:outputLabel value="Final Price:" /><p:spacer width="20" height="20"/><h:outputText value="#{viewQuotationManagedBean.finalPrice}"/>
                         </h:panelGrid> 
                     </h:panelGrid>
 
@@ -117,7 +117,7 @@
                     <p:commandButton value="Reject Quotation" icon="ui-icon-circle-close" action="#{viewQuotationManagedBean.rejectQuotation()}" update="form" ajax="true" />
                     <p:commandButton value="Accept Quotation"  icon="ui-icon-circle-check" action="#{viewQuotationManagedBean.acceptQuotation()}" update="form" ajax="true" />
                 </c:if>
-                <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallquotations.xhtml?faces-redirect-true"/>
+                <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallquotations.xhtml?faces-redirect=true"/>
 
             </h:form>
         </ui:define>
