--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
@@ -20,28 +20,29 @@
         </ui:define>
 
         <ui:define name="left">
-
-            <p:panelMenu>
-                <p:submenu label =" Manage Your Warehouse">
+                      <p:panelMenu>
+                <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
-                    <p:submenu label="Warehouse" >
-                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Warehouse Zone" >
-                        <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
-                        <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Storage Bin" >
-                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Stock" >
-                        <p:menuitem value="Add Stock" url="addstock.xhtml" style="background-color: lavender"/>
-                    </p:submenu>
+                </p:submenu>
+                <p:submenu label =" Warehouse" styleClass="display:block">
+                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                </p:submenu>
+                <p:submenu label="Warehouse Zone" styleClass="display:block" >
+                    <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+                    <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
+                </p:submenu>
+                <p:submenu label="Storage Bin" styleClass="display:block" >
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                </p:submenu>
+                <p:submenu label="Stock" styleClass="display:block" >
+                    <p:menuitem value="Add Stock" url="addstock.xhtml"/>
+                    <p:menuitem value="View Stock" url="viewstock.xhtml"/>
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
+
         <ui:define name="right">
             <h:form id="formMain">
 
